--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="container mx-auto px-6 py-4">
             <div class="flex justify-between items-center">
                 <a href="/" class="flex items-center gap-3 text-2xl font-bold text-gray-900">
-                    <img src="/favicon.ico" alt="S-Tools ID Logo" class="w-8 h-8">
+                    <img src="/stools_logo.png" alt="S-Tools ID Logo" class="w-8 h-8">
                     <span>S-Tools ID</span>
                 </a>
                 <!-- Navigasi Desktop -->
