--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <p class="text-lg md:text-xl text-gray-600 max-w-3xl mx-auto mb-8">
                     Setiap produk dari S-Tools ID dirancang untuk memberikan Anda keunggulan. Jelajahi alat-alat yang akan mendefinisikan ulang cara Anda bekerja.
                 </p>
-                <a href="View.html" class="bg-gradient-to-r from-indigo-600 to-blue-500 text-white font-bold py-3 px-8 rounded-full text-lg transition-all transform hover:scale-105 shadow-lg shadow-blue-500/30">
+                <a href="view.html" class="bg-gradient-to-r from-indigo-600 to-blue-500 text-white font-bold py-3 px-8 rounded-full text-lg transition-all transform hover:scale-105 shadow-lg shadow-blue-500/30">
                     Jelajahi Produk
                 </a>
             </div>
