--- a/invoice.html
+++ b/invoice.html
@@ -69,8 +69,8 @@
             <section class="grid grid-cols-2 gap-8 mb-10">
                 <div>
                     <h3 class="text-sm font-semibold text-gray-500 uppercase tracking-wider mb-2">Ditagihkan Kepada</h3>
-                    <p id="customer-name" class="font-bold text-gray-800">Senrima</p>
-                    <p id="customer-email" class="text-gray-600">me@mail.s-tools.id</p>
+                    <p id="customer-name" class="font-bold text-gray-800">Ode</p>
+                    <p id="customer-email" class="text-gray-600">085285454563</p>
                 </div>
                 <div class="text-right">
                     <h3 class="text-sm font-semibold text-gray-500 uppercase tracking-wider mb-2">Detail Transaksi</h3>
