Update checkout - Sedikit perubahan

--- a/checkout.html
+++ b/checkout.html
@@ -11,7 +11,7 @@
     <!-- Google Fonts: Poppins -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display.swap" rel="stylesheet">
     
     <style>
         body {
@@ -87,14 +87,28 @@
                     <div class="bg-white p-8 rounded-2xl border border-gray-200">
                         <h2 class="text-2xl font-bold text-gray-900 mb-6">Ringkasan Pesanan</h2>
                         
-                        <!-- Item Produk -->
-                        <div class="flex justify-between items-start mb-6">
-                            <div>
-                                <p id="product-id" class="text-sm text-gray-500 font-medium">Memuat...</p>
-                                <h3 id="product-name" class="font-semibold text-gray-800 text-lg leading-tight my-1">Memuat...</h3>
-                                <p id="product-category" class="text-gray-600">Memuat...</p>
+                        <!-- Loading Skeleton -->
+                        <div id="summary-loading" class="animate-pulse">
+                            <div class="h-4 bg-gray-200 rounded w-1/4 mb-4"></div>
+                            <div class="h-6 bg-gray-300 rounded w-3/4 mb-2"></div>
+                            <div class="h-4 bg-gray-200 rounded w-1/2 mb-6"></div>
+                            <div class="h-8 bg-gray-300 rounded w-1/3 ml-auto"></div>
+                        </div>
+
+                        <!-- Item Produk (Hidden by default) -->
+                        <div id="summary-content" class="hidden">
+                            <div class="flex justify-between items-start mb-6">
+                                <div>
+                                    <p id="product-id" class="text-sm text-gray-500 font-medium"></p>
+                                    <h3 id="product-name" class="font-semibold text-gray-800 text-lg leading-tight my-1"></h3>
+                                    <p id="product-category" class="text-gray-600"></p>
+                                </div>
+                                <p class="font-semibold text-gray-800 text-lg text-right" id="product-price" data-price="0"></p>
                             </div>
-                            <p class="font-semibold text-gray-800 text-lg text-right" id="product-price" data-price="0">Memuat...</p>
+                        </div>
+
+                        <div id="summary-error" class="hidden bg-red-100 text-red-700 p-4 rounded-lg">
+                            <p id="summary-error-message"></p>
                         </div>
 
                         <div class="mb-6">
@@ -172,11 +186,11 @@
                                             <div class="space-y-3">
                                                 <label for="qris" class="flex items-center p-4 border border-gray-300 rounded-lg has-[:checked]:border-indigo-600 has-[:checked]:bg-indigo-50 cursor-pointer">
                                                     <input type="radio" id="qris" name="payment_method" value="qris" class="h-4 w-4 text-indigo-600 border-gray-300 focus:ring-indigo-500" checked>
-                                                    <span class="ml-3 font-medium text-gray-800">QRIS (Semua e-wallet & m-banking)</span>
+                                                    <span class="ml-3 font-medium text-gray-800">QRIS</span>
                                                 </label>
-                                                <label for="card" class="flex items-center p-4 border border-gray-300 rounded-lg has-[:checked]:border-indigo-600 has-[:checked]:bg-indigo-50 cursor-pointer">
-                                                    <input type="radio" id="card" name="payment_method" value="card" class="h-4 w-4 text-indigo-600 border-gray-300 focus:ring-indigo-500">
-                                                    <span class="ml-3 font-medium text-gray-800">Metode Pembayaran Lain</span>
+                                                <label for="midtrans" class="flex items-center p-4 border border-gray-300 rounded-lg has-[:checked]:border-indigo-600 has-[:checked]:bg-indigo-50 cursor-pointer">
+                                                    <input type="radio" id="midtrans" name="payment_method" value="midtrans" class="h-4 w-4 text-indigo-600 border-gray-300 focus:ring-indigo-500">
+                                                    <span class="ml-3 font-medium text-gray-800">Midtrans (Virtual Account, Bank Transfer, dll)</span>
                                                 </label>
                                             </div>
                                         </div>
