--- a/transfer.html
+++ b/transfer.html
@@ -32,7 +32,7 @@
                     <span>S-Tools ID</span>
                 </a>
                 <a href="view.html" class="text-gray-600 hover:text-indigo-600 font-semibold">
-                    Kembali ke Produk &rarr;
+                    Produk &rarr;
                 </a>
             </div>
         </div>
@@ -204,4 +204,5 @@
     </script>
 </body>
 </html>
+
 
