--- a/transfer.html
+++ b/transfer.html
@@ -31,7 +31,7 @@
                     <img src="stools_logo.png" alt="S-Tools ID Logo" class="h-8 w-auto">
                     <span>S-Tools ID</span>
                 </a>
-                <a href="View.html" class="text-gray-600 hover:text-indigo-600 font-semibold">
+                <a href="view.html" class="text-gray-600 hover:text-indigo-600 font-semibold">
                     Kembali &rarr;
                 </a>
             </div>
@@ -206,3 +206,4 @@
     </script>
 </body>
 </html>
+
